fix overflow on ios

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,10 +25,7 @@ html,
 body,
 #app {
   height: 100%;
-}
-
-html,
-body {
+  position: relative;
   overflow: hidden;
 }
 
